2002-01-10  Ryan C Yeske  <rcyeske@sfu.ca>

	* nethack.el (nethack-map-glyph-face): Put in nethack-faces-faces
	group.
	(nethack-use-glyphs): Default to nil.
	(nethack-toggle-glyphs): New function.

	* nethack-api.el (nethack-api-display-nhwindow): Don't wait for a
	key on echo area messages.
	(nethack-menu-item-print, nethack-menu-toggle-item)
	(nethack-menu-toggle-item, nethack-menu-toggle-all-items)
	(nethack-menu-submit, nethack-api-add-menu): Handle prefix arg on
	menu selection.  From sabetts.

	* nethack-cmd.el (redraw-screen): Restore window configuration
	always, only redraw glyphs with a prefix arg.
	(defun-nethack-command): Expand cmdstr in test.

	* nethack-api.el (nethack-restore-window-configuration): Make the
	status window dedicated.

2002-01-01  shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack): set nethack-status-alist to nil when
	starting a new nethack game.

2002-01-01    <sabetts@watchman.phalanx.tmp>

	* nethack-api.el (nethack-menu-toggle-all-items): only toggle
	items that have identifiers.
	(nethack-api-update-status): remove CL dependancy for flag
	processing.
	(nethack-api-update-status): properly re-create the "Flags" status
	alist.

2001-12-20  shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-map-glyph-face): new face.

	* nethack-api.el (nethack-api-update-status): take 1 argument
	which is an alist of status properties. Print each status
	property.
	(nethack-api-print-status-numeric): new function
	(nethack-api-print-status-string): new function
	(nethack-api-update-status): highlight status attributes that
	change.
	(nethack-api-update-status): Insert a space between each
	attribute.
	(nethack-api-clear-nhwindow): insert newlines using the
	nethack-map-glyph-face when using glyphs.

	* nethack.el (nh-sentinel): evaluate any remaining lisp code when
	the lisp process gets a sentinel event.

2001-12-19  shawn  <sabetts@vcn.bc.ca>

	* nethack.el: require nethack-glyphs
	(nethack-use-glyphs): new variable
